// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArraySchema denormalization Class denormalizes a single entity 1`] = `
[
  {
    "id": 1,
    "name": "Milo",
  },
  {
    "id": 2,
    "name": "Jake",
  },
]
`;

exports[`ArraySchema denormalization Class denormalizes a single entity 2`] = `
[
  Immutable.Map {
    "id": 1,
    "name": "Milo",
  },
  Immutable.Map {
    "id": 2,
    "name": "Jake",
  },
]
`;

exports[`ArraySchema denormalization Class denormalizes multiple entities 1`] = `
[
  {
    "id": "123",
    "type": "cats",
  },
  {
    "id": "123",
    "type": "people",
  },
  {
    "id": "789",
  },
  {
    "id": "456",
    "type": "cats",
  },
]
`;

exports[`ArraySchema denormalization Class denormalizes multiple entities 2`] = `
[
  Immutable.Map {
    "id": "123",
    "type": "cats",
  },
  Immutable.Map {
    "id": "123",
    "type": "people",
  },
  {
    "id": "789",
  },
  Immutable.Map {
    "id": "456",
    "type": "cats",
  },
]
`;

exports[`ArraySchema denormalization Class does not assume mapping of schema to attribute values when schemaAttribute is not set 1`] = `
{
  "entities": {
    "cats": {
      "1": {
        "id": 1,
      },
      "2": {
        "id": 2,
      },
    },
  },
  "result": [
    {
      "cat": 1,
      "id": 5,
    },
    {
      "cat": 2,
      "id": 6,
    },
  ],
}
`;

exports[`ArraySchema denormalization Class returns the input value if is not an array 1`] = `
{
  "fillings": {},
  "id": "123",
}
`;

exports[`ArraySchema denormalization Class returns the input value if is not an array 2`] = `
Immutable.Map {
  "id": "123",
  "fillings": Immutable.Map {},
}
`;

exports[`ArraySchema denormalization Object denormalizes a single entity 1`] = `
[
  {
    "id": 1,
    "name": "Milo",
  },
  {
    "id": 2,
    "name": "Jake",
  },
]
`;

exports[`ArraySchema denormalization Object denormalizes a single entity 2`] = `
[
  Immutable.Map {
    "id": 1,
    "name": "Milo",
  },
  Immutable.Map {
    "id": 2,
    "name": "Jake",
  },
]
`;

exports[`ArraySchema denormalization Object returns the input value if is not an array 1`] = `
{
  "fillings": null,
  "id": "123",
}
`;

exports[`ArraySchema denormalization Object returns the input value if is not an array 2`] = `
Immutable.Map {
  "id": "123",
  "fillings": null,
}
`;

exports[`ArraySchema normalization Class filters out undefined and null normalized values 1`] = `
{
  "entities": {
    "user": {
      "123": {
        "id": 123,
      },
    },
  },
  "result": [
    123,
  ],
}
`;

exports[`ArraySchema normalization Class normalizes Objects using their values 1`] = `
{
  "entities": {
    "user": {
      "1": {
        "id": 1,
      },
      "2": {
        "id": 2,
      },
    },
  },
  "result": [
    1,
    2,
  ],
}
`;

exports[`ArraySchema normalization Class normalizes a single entity 1`] = `
{
  "entities": {
    "cats": {
      "1": {
        "id": 1,
      },
      "2": {
        "id": 2,
      },
    },
  },
  "result": [
    1,
    2,
  ],
}
`;

exports[`ArraySchema normalization Class normalizes multiple entities 1`] = `
{
  "entities": {
    "cats": {
      "123": {
        "id": "123",
        "type": "cats",
      },
      "456": {
        "id": "456",
        "type": "cats",
      },
    },
    "person": {
      "123": {
        "id": "123",
        "type": "people",
      },
    },
  },
  "result": [
    {
      "id": "123",
      "schema": "cats",
    },
    {
      "id": "123",
      "schema": "people",
    },
    {
      "id": "789",
      "name": "fido",
    },
    {
      "id": "456",
      "schema": "cats",
    },
  ],
}
`;

exports[`ArraySchema normalization Class normalizes multiple entities 2`] = `
[
  [
    {
      "id": "123",
      "type": "cats",
    },
    [
      {
        "id": "123",
        "type": "cats",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
  [
    {
      "id": "123",
      "type": "cats",
    },
    [
      {
        "id": "123",
        "type": "cats",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
  [
    {
      "id": "123",
      "type": "people",
    },
    [
      {
        "id": "123",
        "type": "cats",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
  [
    {
      "id": "123",
      "type": "people",
    },
    [
      {
        "id": "123",
        "type": "cats",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
  [
    {
      "id": "789",
      "name": "fido",
    },
    [
      {
        "id": "123",
        "type": "cats",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
  [
    {
      "id": "456",
      "type": "cats",
    },
    [
      {
        "id": "123",
        "type": "cats",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
  [
    {
      "id": "456",
      "type": "cats",
    },
    [
      {
        "id": "123",
        "type": "cats",
      },
      {
        "id": "123",
        "type": "people",
      },
      {
        "id": "789",
        "name": "fido",
      },
      {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
]
`;

exports[`ArraySchema normalization Object normalizes Objects using their values 1`] = `
{
  "entities": {
    "user": {
      "1": {
        "id": 1,
      },
      "2": {
        "id": 2,
      },
    },
  },
  "result": [
    1,
    2,
  ],
}
`;

exports[`ArraySchema normalization Object normalizes plain arrays as shorthand for ArraySchema 1`] = `
{
  "entities": {
    "user": {
      "1": {
        "id": 1,
      },
      "2": {
        "id": 2,
      },
    },
  },
  "result": [
    1,
    2,
  ],
}
`;

exports[`ArraySchema normalization Object passes its parent to its children when normalizing 1`] = `
{
  "entities": {
    "children": {
      "4": {
        "content": "child",
        "id": 4,
        "parentId": 1,
        "parentKey": "children",
      },
    },
    "parents": {
      "1": {
        "children": [
          4,
        ],
        "content": "parent",
        "id": 1,
      },
    },
  },
  "result": 1,
}
`;
